# Lectura-Server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  conftest.py  data.json  docker-compose.yml  pyproject.toml
apps/accounts/: admin.py  enums.py  models.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name_and_more.py  0003_user_created_at_user_updated_at.py  0004_user_is_verified.py  0005_user_tier.py  0006_user_last_storage_warning_level.py  0007_user_current_storage_usage.py  0008_user_avatar.py  0009_passwordresettoken.py  0010_emailverificationtoken.py  0011_alter_user_avatar.py
apps/handouts/: admin.py  apps.py  enums.py  models.py  serializers.py  tests.py  theme.py  urls.py  utils.py  views.py
apps/handouts/migrations/: 0001_initial.py  0002_attachment.py  0003_section_level_section_parent.py  0004_alter_section_content.py  0005_handout_file_size_handout_last_downloaded_at.py  0006_handout_subtitle.py  0007_attachment_alt_text_attachment_caption.py  (+1 more)
apps/letters/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
apps/projects/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
config/: RESTframework_settings.py  celery.py  cloudinary_settings.py  jwt_settings.py  settings.py  smtp_settings.py  swagger_settings.py  unfold_settings.py  urls.py
docs/dbml/: Lectura.dbml
scripts/: deploy.sh
security/: otp_generator.py
templates/emails/: base_layout.html  password_reset.html  storage_critical.html  storage_warning.html
templates/pdf/: handout_template.html
(+9 files in other folders)
